<resources>
    <string name="app_name">TwinChat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_field_hint">User name</string>
    <string name="password_field_hint">Password</string>
    <string name="login_button_text">Sign In</string>
    <string name="signup_error_message">Please make sure you entered username, password and e-mail.</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you entered username and password.</string>
    <string name="login_error_title">Oops!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signin_button_text">Sign In!</string>
    <string name="email_field_hint">E-mail</string>
    <string name="signUp_text">Don\'t have an account? Sign Up!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="menu_friends_label">Friends</string>
    <string name="menu_main_label">Chat</string>
    <string name="message_field_hint">Type message</string>
    <string name="send_button_text">SEND</string>
    <string name="message_friends_count_overflow">You can\'t add more than one friends</string>
    <string name="alert_dialog_title">Sorry!</string>
    <string name="drawerOpen">Drawer open</string>
    <string name="drawerClose">Drawer close</string>
    <string name="error_external_storage">External storage error.</string>
    <string name="general_error">Sorry, there was an error.</string>
    <string-array name="camera_choises">
        <item>Take Picture</item>
        <item>Choose Picture</item>
    </string-array>
    <string name="title_activity_send_photo">SendPhotoActivity</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="btn_send_text">Send</string>
    <string name="external_storage_error">Failed to create directory</string>
    <string name="message_sent">Message sent</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
</resources>
