<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="glebit.com.twinchat.SignUpActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/username_field_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailField"
        android:layout_below="@id/usernameField"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_field_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_below="@+id/emailField"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_field_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin_button_text"
        android:id="@+id/signUpButton"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
