<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="glebit.com.twinchat.SendPhotoActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendPhotoImg"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel_text"
        android:id="@+id/btnCancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/sendPhotoImg"
        android:layout_toStartOf="@+id/sendPhotoImg"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_text"
        android:id="@+id/btnSendPhoto"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_toEndOf="@+id/btnCancel"
        android:layout_alignLeft="@+id/sendPhotoImg"
        android:layout_alignStart="@+id/sendPhotoImg"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/message_field_hint"
        android:id="@+id/PhotoDescriptionField"
        android:layout_above="@+id/btnCancel"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
